# runtime-plus-plus

./: .gitmodules  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
project/: NewRuntimeState.cc  NewRuntimeState.h  README.md  RuntimeDesktopLauncher.cc  run.sh
project-testing/: README.md
src/: CMakeLists.txt
src/core/: RuntimeCore.cc  RuntimeCore.h  RuntimeEvents.cc  RuntimeEvents.h  RuntimeInput.cc  RuntimeInput.h  RuntimeWindow.cc  RuntimeWindow.h
src/gfx/: RuntimeGUI.cc  RuntimeGUI.h  RuntimeRenderer.cc  RuntimeRenderer.h
src/process/: RProcess.cc  RProcess.h  RuntimeProcessManager.cc  RuntimeProcessManager.h
src/state/: RuntimeEngineState.cc  RuntimeEngineState.h
src/state/implementation/: DebugState.cc  DebugState.h
src/utils/: RuntimeUtilities.cc  RuntimeUtilities.h
